Fixed a bug where F3 search in the Repository Browser would stop on a folder before finding documents with a slash in its name F3 search in the Repository Browser now scrolls to show the result of the search Replaced compilation of dump data to object.dump() in the Get Attributes window Some code cleanup

--- a/src/main/resources/nl/bos/views/QueryWithResult.fxml
+++ b/src/main/resources/nl/bos/views/QueryWithResult.fxml
@@ -1,35 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
-<VBox xmlns:fx="http://javafx.com/fxml/1" fx:id="queryWithResultBox" BorderPane.alignment="CENTER"
-      xmlns="http://javafx.com/javafx/8.0.121" fx:controller="nl.bos.controllers.QueryWithResult">
-    <SplitPane dividerPositions="0.6" orientation="VERTICAL"  VBox.vgrow="ALWAYS">
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+
+<VBox fx:id="queryWithResultBox" BorderPane.alignment="CENTER" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nl.bos.controllers.QueryWithResult">
+    <SplitPane dividerPositions="0.6" orientation="VERTICAL" VBox.vgrow="ALWAYS">
         <VBox>
             <padding>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </padding>
-            <Label text="Result"/>
-            <TableView fx:id="result" VBox.vgrow="ALWAYS"/>
+            <Label text="Result" />
+            <TableView fx:id="result" VBox.vgrow="ALWAYS" />
         </VBox>
         <VBox>
             <padding>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
             </padding>
-            <Label text="DQL/SQL Statement"/>
-            <TextArea fx:id="statement" VBox.vgrow="ALWAYS"/>
-            <Label text="DQL/SQL History"/>
+            <Label text="DQL/SQL Statement" />
+            <TextArea fx:id="statement" VBox.vgrow="ALWAYS">
+            <font>
+               <Font name="Monospaced Regular" size="12.0" />
+            </font></TextArea>
+            <Label text="DQL/SQL History" />
             <HBox>
-                <ComboBox fx:id="historyStatements" prefHeight="25.0"/>
-                <ImageView id="btnDeleteHistoryItem" fitHeight="24.0" fitWidth="24.0"
-                           onMouseClicked="#handleDeleteHistoryItem" pickOnBounds="true" preserveRatio="true">
+                <ComboBox fx:id="historyStatements" prefHeight="25.0" />
+                <ImageView id="btnDeleteHistoryItem" fitHeight="24.0" fitWidth="24.0" onMouseClicked="#handleDeleteHistoryItem" pickOnBounds="true" preserveRatio="true">
                     <HBox.margin>
-                        <Insets left="5.0"/>
+                        <Insets left="5.0" />
                     </HBox.margin>
-                    <Image url="@../icons/delete.gif"/>
+                    <Image url="@../icons/delete.gif" />
                 </ImageView>
             </HBox>
         </VBox>
