--- a/src/main/resources/nl/bos/views/DescribeObject.fxml
+++ b/src/main/resources/nl/bos/views/DescribeObject.fxml
@@ -3,45 +3,40 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<HBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="250.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121"
-      fx:controller="nl.bos.controllers.DescribeObject">
-    <VBox prefWidth="300.0" spacing="10.0">
-        <HBox.margin>
-            <Insets left="5.0" top="5.0"/>
-        </HBox.margin>
-        <Label text="Select a type or table name"/>
-        <HBox>
-            <Label text="Name">
-                <HBox.margin>
-                    <Insets right="5.0"/>
-                </HBox.margin>
-            </Label>
-            <TextField fx:id="txtNrOfItems" editable="false" prefWidth="35.0"/>
+<HBox prefHeight="450.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="nl.bos.controllers.DescribeObject">
+    <VBox alignment="TOP_CENTER" prefWidth="300.0" spacing="5.0">
+        <Label text="Select a type or table name" />
+        <HBox alignment="BOTTOM_LEFT">
+            <Label text="Name:" />
+         <Region prefWidth="200.0" HBox.hgrow="ALWAYS" />
+            <TextField fx:id="txtNrOfItems" editable="false" prefWidth="35.0" />
         </HBox>
-        <ComboBox fx:id="cbTypesTables" onAction="#handleTypesTables" prefWidth="150.0"/>
-        <HBox spacing="5.0">
-            <RadioButton id="rbTypeTable" mnemonicParsing="false" onAction="#handleTypeTable" selected="true"
-                         text="Type &amp; Table">
+        <ComboBox fx:id="cbTypesTables" maxWidth="1.7976931348623157E308" onAction="#handleTypesTables" prefWidth="150.0" />
+        <HBox alignment="CENTER" spacing="5.0">
+            <RadioButton id="rbTypeTable" mnemonicParsing="false" onAction="#handleTypeTable" selected="true" text="Type &amp; Table">
                 <toggleGroup>
                     <!--suppress JavaFxUnresolvedFxIdReference -->
-                    <ToggleGroup fx:id="tgTypeTable"/>
+                    <ToggleGroup fx:id="tgTypeTable" />
                 </toggleGroup>
             </RadioButton>
-            <RadioButton id="rbType" mnemonicParsing="false" onAction="#handleType" text="Type"
-                         toggleGroup="$tgTypeTable"/>
-            <RadioButton id="rbTable" mnemonicParsing="false" onAction="#handleTable" text="Table"
-                         toggleGroup="$tgTypeTable"/>
+            <RadioButton id="rbType" mnemonicParsing="false" onAction="#handleType" text="Type" toggleGroup="$tgTypeTable" />
+            <RadioButton id="rbTable" mnemonicParsing="false" onAction="#handleTable" text="Table" toggleGroup="$tgTypeTable" />
         </HBox>
-        <HBox spacing="5.0">
-            <Button fx:id="btnOk" defaultButton="true" disable="true" mnemonicParsing="false" onAction="#handleOK"
-                    text="Ok"/>
-            <Button fx:id="btnCancel" cancelButton="true" mnemonicParsing="false" onAction="#handleCancel"
-                    text="Cancel"/>
+      <Region prefHeight="10.0" />
+        <HBox alignment="CENTER" spacing="5.0">
+         <Region />
+            <Button fx:id="btnOk" defaultButton="true" disable="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleOK" text="Ok" HBox.hgrow="ALWAYS" />
+         <Region />
+            <Button fx:id="btnCancel" cancelButton="true" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#handleCancel" text="Cancel" HBox.hgrow="ALWAYS" />
+         <Region />
         </HBox>
+      <HBox.margin>
+         <Insets left="5.0" top="5.0" />
+      </HBox.margin>
     </VBox>
     <TreeView fx:id="tvTypesTables" prefWidth="285.0">
         <HBox.margin>
-            <Insets bottom="5.0" left="5.0" top="5.0"/>
+            <Insets bottom="5.0" left="5.0" top="5.0" />
         </HBox.margin>
     </TreeView>
 </HBox>
