--- a/src/main/resources/nl/bos/views/ResultTable.fxml
+++ b/src/main/resources/nl/bos/views/ResultTable.fxml
@@ -1,9 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.AnchorPane?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml"
-            xmlns="http://javafx.com/javafx"
-            fx:controller="nl.bos.controllers.ResultTable"
-            prefHeight="600.0" prefWidth="650.0">
-
-</AnchorPane>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<VBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121"
+      fx:controller="nl.bos.controllers.ResultTable">
+    <TableView fx:id="tvResults">
+        <columns>
+            <TableColumn prefWidth="75.0" text="C1"/>
+            <TableColumn prefWidth="75.0" text="C2"/>
+        </columns>
+        <VBox.margin>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+        </VBox.margin>
+    </TableView>
+    <HBox>
+        <Button fx:id="btnRefresh" mnemonicParsing="false" onAction="#handleRefresh" text="Refresh">
+            <HBox.margin>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+            </HBox.margin>
+        </Button>
+        <Button fx:id="btnOk" mnemonicParsing="false" onAction="#handleOk" text="OK">
+            <HBox.margin>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+            </HBox.margin>
+        </Button>
+        <TextField fx:id="txtCount" editable="false">
+            <HBox.margin>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+            </HBox.margin>
+        </TextField>
+    </HBox>
+</VBox>
