--- a/src/main/resources/nl/bos/views/WorkflowEditor.fxml
+++ b/src/main/resources/nl/bos/views/WorkflowEditor.fxml
@@ -57,17 +57,17 @@
             </padding>
             <Tab text="Process variable">
                 <AnchorPane>
-                    <TreeTableView prefHeight="200.0" prefWidth="650.0"/>
+                    <TreeTableView fx:id="ttvVariables" prefHeight="200.0" prefWidth="650.0"/>
                 </AnchorPane>
             </Tab>
             <Tab text="Process packages">
                 <AnchorPane>
-                    <TableView prefHeight="200.0" prefWidth="650.0"/>
+                    <TableView fx:id="tvPackages" prefHeight="200.0" prefWidth="650.0"/>
                 </AnchorPane>
             </Tab>
             <Tab text="Process attachments">
                 <AnchorPane>
-                    <TableView prefHeight="200.0" prefWidth="650.0"/>
+                    <TableView fx:id="tvAttachments" prefHeight="200.0" prefWidth="650.0"/>
                 </AnchorPane>
             </Tab>
             <Tab text="Process ErrorContents">
